--- a/index.html
+++ b/index.html
@@ -5,17 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/x-icon" href="/images/logo.png" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Delani Studios</title>
 </head>
 <body>
     <div class="head">
-        <img src="images/h_img.jpg">
+        <img src="images/h_img.jpg" id="first">
         <div class="centered">
             <h1>WELCOME<br><br>TO DELANI STUDIO</h1><br><br></h1>
             <p>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</p>
+        </div><br><br><br>
+        <div class="aboutSect">
+            <h2>ABOUT US</h2>
+            <p>When you work with us you are part of a team of committed collaborators. All aspects of our software development process are integrated, interactive and agile.</p>
+            <p>Our approach unifies design, development and product management to create exceptional products.</p>
+            <p>We start each project by understanding your business needs, the user's needs and the product requirements, then we help translate them into effective and elegant solutions</p>
+            </div>
+    </div><br><br>
+    <div class="services">
+        <img src="images/s_image.jpg" id="second">
+        <div class="serve">
+            <h2>SERVICES</h2><br>
+            <p>Before we sign a contract or write a line of code, our team will spend the neccessary time needed to understand your product vission.
+            <p>The outcome of the scoping session a proposal or high-level statement of work.</p>
+            <p>based on your requirements, we can provide a complete offering or just the piece you need. </p>
         </div>
-    </div>    
+    </div>      
 </body>
 </html>
