--- a/index.html
+++ b/index.html
@@ -22,15 +22,20 @@
             <p>Our approach unifies design, development and product management to create exceptional products.</p>
             <p>We start each project by understanding your business needs, the user's needs and the product requirements, then we help translate them into effective and elegant solutions</p>
             </div>
-    </div><br><br>
+    </div><br>
     <div class="services">
-        <img src="images/s_image.jpg" id="second">
+        <img src="images/s_image.jpg" alt="services offered" id="tude">
         <div class="serve">
             <h2>SERVICES</h2><br>
-            <p>Before we sign a contract or write a line of code, our team will spend the neccessary time needed to understand your product vission.
+            <strong><p>Before we sign a contract or write a line of code, our team will spend the neccessary time needed to understand your product vission.
             <p>The outcome of the scoping session a proposal or high-level statement of work.</p>
             <p>based on your requirements, we can provide a complete offering or just the piece you need. </p>
+            </strong>
         </div>
-    </div>      
+    </div>  
+    <div class="purp">
+        
+
+    </div>        
 </body>
 </html>
