--- a/index.html
+++ b/index.html
@@ -107,6 +107,36 @@
         </div>
       </div>
   </div>
+  <div class="contact">
+    <h2>CONTACT US</h2>
+    <form id="form58" action="https://us6.list-manage.com/contact-form?u=f810f3e73f308c951f7688efc&form_id=74715284c5b6ccaf21af46493981abcf" method="post"  name="subscribe-form" class="validate" target="_blank" novalidate>
+        <div class="row" id="contact-info">
+            <div class="col-6">
+              <div class="contact1">
+                <label for="name"></label>
+                <input type="text" name="NAME" class="required form-control" id="Fname" placeholder="Name...">
+
+              </div>
+            </div>
+            <div class="col-6">
+              <div class="form-group">
+                <label for="email"></label>
+                <input type="text" value="" name="EMAIL" class="required email form-control" id="mce-EMAIL email" placeholder="Email">
+              </div>
+            </div>
+            <div class="col-12">
+              <div class="form-group">
+              <label for="message"></label>
+              <textarea type="text" name="MESSAGE" class="required form-control" id="mce-MESSAGE comment" cols="30" rows="10" placeholder="Your message here..."></textarea>
+            </div>
+          </div>
+        </div>
+        <div class="submit"><input type="submit" value="Submit" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+       </form>
+</div>
+   
+  </div>
+  
       
 </body>
 </html>
