add the social icons

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h1>WELCOME<br>TO DELANI STUDIO</h1><br></h1>
             <p><strong>PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</strong></p>
             <div class="mouse">
-            <img src="images/mouse_click.png", alt="mouse click", id="mouseclick">    
+           <a href="#aboutSect"></a> <img src="images/mouse_click.png", alt="mouse click", id="mouseclick">    
             </div>
         </div><br><br><br>
         <div class="aboutSect">
@@ -68,75 +68,89 @@
                   <img src="images/icons/product_icon.png" alt="products">
                 </div>
             </div>
-    </div>    
+    </div>  
+    <div class="portfolio">  
     <h2>PORTFOLIO</h2>
     <div class="row" id="portfolio">
-      <div class="col-md-3" id="work1">
+      <div class="mage" id="work1">
         <img src="images/work/work1.jpg" alt="work1" >
         <p id="hover1"class="text">Social statistics</p>
       </div>    
-      <div class="col-md-3" id="work2">
+      <div class="mage" id="work2">
         <img src="images/work/work2.jpg" alt="work2">
         <p id="hover2" class="text">Abstract Designs</p>
       </div>
-      <div class="col-md-3" id="work3">
+      <div class="mage" id="work3">
         <img src="images/work/work3.jpg" alt="work3">
         <p id="hover3"class="text">Mighty Ontario Security</p>
       </div>
-      <div class="col-md-3" id="work4">
+      <div class="mage" id="work4">
         <img src="images/work/work4.jpg" alt="work4">
         <p id="overlay4" class="text">Abstract Designs</p>
       </div>
     </div>
     <div class="row" id="portfolio">
-        <div class="col-md-3" id="work5">
+        <div class="mage" id="work5">
           <img src="images/work/work5.jpg" alt="work5">
           <p id="overlay5" class="text">Elena Themes</p>
         </div>
-        <div class="col-md-3" id="work6">
+        <div class="mage" id="work6">
           <img src="images/work/work6.jpg" alt="work6">
           <p id="overlay6"class="text">Age Calculator</p>
         </div>
-        <div class="col-md-3" id="work7">
+        <div class="mage" id="work7">
           <img src="images/work/work7.jpg" alt="work7">
           <p id="overlay7" class="text">Burned Logo Creators</p>
         </div>
-        <div class="col-md-3" id="work8">
+        <div class="mage" id="work8">
           <img src="images/work/work8.jpg" alt="work8">
           <p id="overlay8" class="text">Giraffe Restaurant</p>
         </div>
       </div>
+    </div>
   </div>
   <div class="contact">
     <h2>CONTACT US</h2>
     <form id="form58" action="https://us6.list-manage.com/contact-form?u=f810f3e73f308c951f7688efc&form_id=74715284c5b6ccaf21af46493981abcf" method="post"  name="subscribe-form" class="validate" target="_blank" novalidate>
         <div class="row" id="contact-info">
-            <div class="col-6">
+            <div class="field1">
               <div class="contact1">
                 <label for="name"></label>
-                <input type="text" name="NAME" class="required form-control" id="Fname" placeholder="Name...">
+                <input type="text" name="NAME" class="required form-control" id="Fname" placeholder="Name..">
 
               </div>
             </div>
-            <div class="col-6">
+            <div class="field1">
               <div class="form-group">
                 <label for="email"></label>
-                <input type="text" value="" name="EMAIL" class="required email form-control" id="mce-EMAIL email" placeholder="Email">
+                <input type="text" value="" name="EMAIL" class="required email form-control" id="mail" placeholder="Email">
               </div>
             </div>
-            <div class="col-12">
+            <div class="field2">
               <div class="form-group">
               <label for="message"></label>
-              <textarea type="text" name="MESSAGE" class="required form-control" id="mce-MESSAGE comment" cols="30" rows="10" placeholder="Your message here..."></textarea>
+              <textarea type="text" name="MESSAGE" class="required form-control" id="msg" cols="30" rows="10" placeholder="Your message here..."></textarea>
             </div>
           </div>
         </div>
-        <div class="submit"><input type="submit" value="Submit" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+    </div><br>
+        <div class="submit"><input type="submit" value="Submit" name="subscribe" id="subscribe" class="button"></div>
        </form>
 </div>
-   
-  </div>
-  
-      
+   </div><br><br>
+   <footer>
+    <img src="images/social icons/twitter.png" alt="twitter">
+    <img src="images/social icons/dribble.png" alt="dribble">
+    <img src="images/social icons/facebook.png" alt="facebook">
+    <img src="images/social icons/g_plus.png" alt="g_plus">
+    <img src="images/social icons/skype.png" alt="skype">
+    <img src="images/social icons/stumble_upon.png" alt="stumble_upon">
+    <img src="images/social icons/behance.png" alt="behance">
+    <img src="images/social icons/pinterest.png" alt="pinterest">
+    <img src="images/social icons/flickr.png" alt="flickr">
+    <p>DELANI STUDIO</p>
+    <p>2021</p>
+  </footer>
+     
 </body>
 </html>
