fix all the styling errors.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="shortcut icon" type="image/x-icon" href="/images/logo.png" />
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/styles.css">
+
+
     <title>Delani Studios</title>
 </head>
 <body>
@@ -34,123 +36,96 @@
             </strong>
         </div>
     </div>  
-    <div class="purp">
-        <h2>WHAT WE DO</h2><br><br>
-        <div class="row">
-            <div class="col-md-4">
-              <div id="design">
-                <h2 class="title">DESIGN</h2>
-                <p>Our design practice offers a full range of services including brand strategy, interaction and visual design and user experience testing.</p>
-                  <p>Throughout your project, our designers create and implement visual design and workflows, solicit user feedback and work with you to make sure what gets built is what is needed.</p>
-              </div>
-              <div id="design-image">
-                <img src="images/icons/design_icon.png" alt="design">
-              </div>
+    <h3 id="h3"><strong>WHAT WE DO</strong></h3>
+    <div id="icons" class="row">
+        <div id="design" class="col-md-4">
+            <div id="img1">
+                <img src="images/icons/design_icon.png">
             </div>
-            <div class="col-md-4">
-                <div id="develop">
-                  <h2 class="title">DEVELOPMENT</h2>
-                  <p>All engineers are fluent in the latest enterprise, mobile and web development technologies.</p>
-                     <p>They collaborate with your team to write, and improve code on a daily basis, using proven practices such as test-driven development and pair programming.</p>
-                </div>
-                <div id="development-image">
-                  <img src="images/icons/dev_icon.png" alt="development">
-                </div>
-            </div>
-
-            <div class="col-md-4">
-                <div id="product">
-                  <h2 class="title">PRODUCT MANAGEMENT</h2>
-                  <p>All engineers are fluent in the latest enterprise, mobile and web development technologies.</p>
-                  <p>They collaborate with your team to write, and improve code on a daily basis, using proven practices such as test-driven development and pair programming.</p>
-                </div>
-                <div id="product-image">
-                  <img src="images/icons/product_icon.png" alt="products">
-                </div>
-            </div>
-    </div>  
-    <div class="portfolio">  
-    <h2>PORTFOLIO</h2>
-    <div class="row" id="portfolio">
-      <div class="mage" id="work1">
-        <img src="images/work/work1.jpg" alt="work1" >
-        <p id="hover1"class="text">Social statistics</p>
-      </div>    
-      <div class="mage" id="work2">
-        <img src="images/work/work2.jpg" alt="work2">
-        <p id="hover2" class="text">Abstract Designs</p>
-      </div>
-      <div class="mage" id="work3">
-        <img src="images/work/work3.jpg" alt="work3">
-        <p id="hover3"class="text">Mighty Ontario Security</p>
-      </div>
-      <div class="mage" id="work4">
-        <img src="images/work/work4.jpg" alt="work4">
-        <p id="overlay4" class="text">Abstract Designs</p>
-      </div>
-    </div>
-    <div class="row" id="portfolio">
-        <div class="mage" id="work5">
-          <img src="images/work/work5.jpg" alt="work5">
-          <p id="overlay5" class="text">Elena Themes</p>
-        </div>
-        <div class="mage" id="work6">
-          <img src="images/work/work6.jpg" alt="work6">
-          <p id="overlay6"class="text">Age Calculator</p>
-        </div>
-        <div class="mage" id="work7">
-          <img src="images/work/work7.jpg" alt="work7">
-          <p id="overlay7" class="text">Burned Logo Creators</p>
-        </div>
-        <div class="mage" id="work8">
-          <img src="images/work/work8.jpg" alt="work8">
-          <p id="overlay8" class="text">Giraffe Restaurant</p>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="contact">
-    <h2>CONTACT US</h2>
-    <form id="form58" action="https://us6.list-manage.com/contact-form?u=f810f3e73f308c951f7688efc&form_id=74715284c5b6ccaf21af46493981abcf" method="post"  name="subscribe-form" class="validate" target="_blank" novalidate>
-        <div class="row" id="contact-info">
-            <div class="field1">
-              <div class="contact1">
-                <label for="name"></label>
-                <input type="text" name="NAME" class="required form-control" id="Fname" placeholder="Name..">
-
-              </div>
-            </div>
-            <div class="field1">
-              <div class="form-group">
-                <label for="email"></label>
-                <input type="text" value="" name="EMAIL" class="required email form-control" id="mail" placeholder="Email">
-              </div>
-            </div>
-            <div class="field2">
-              <div class="form-group">
-              <label for="message"></label>
-              <textarea type="text" name="MESSAGE" class="required form-control" id="msg" cols="30" rows="10" placeholder="Your message here..."></textarea>
-            </div>
+            <h7>DESIGN</h7>
+            <div id="des1">
+              <p>Our design practice offers a full range of services including brand strategy, interaction and visual design and user experience testing. Throughout your project, our designers create and implement visual design and workflows, solicit user feedback and work with you to make sure what gets built is what is needed.</p>
           </div>
-        </div>
-    </div><br>
-        <div class="submit"><input type="submit" value="Submit" name="subscribe" id="subscribe" class="button"></div>
-       </form>
+      </div>
+      <div id="development" class="col-md-4">
+          <div id="img2">
+              <img src="images/icons/dev_icon.png">
+          </div>
+          <h7>DEVELOPMENT</h7>
+          <div id="des2">
+              <p>All engineers are fluent in the latest enterprise, mobile and web development technologies. They collaborate with your team to write, and improve code on a daily basis, using proven practices such as test-driven development and pair programming.</p>
+          </div>
+      </div>
+      <div id="product" class="col-md-4">
+          <div id="img3">
+              <img src="images/icons/product_icon.png">
+          </div>
+          <h7>PRODUCT MANAGEMENT</h7>
+          <div id="des3">
+              <p>Planning and development is iterative. Because we are constantly coding and testing, the products we build are always ready to go live. This iterative process allows for changes as business requirements evolve.</p>
+          </div>
+      </div>
+  </div>
 </div>
-   </div><br><br>
-   <footer>
-    <img src="images/social icons/twitter.png" alt="twitter">
-    <img src="images/social icons/dribble.png" alt="dribble">
-    <img src="images/social icons/facebook.png" alt="facebook">
-    <img src="images/social icons/g_plus.png" alt="g_plus">
-    <img src="images/social icons/skype.png" alt="skype">
-    <img src="images/social icons/stumble_upon.png" alt="stumble_upon">
-    <img src="images/social icons/behance.png" alt="behance">
-    <img src="images/social icons/pinterest.png" alt="pinterest">
-    <img src="images/social icons/flickr.png" alt="flickr">
-    <p>DELANI STUDIO</p>
-    <p>2021</p>
-  </footer>
+<div id="portfolio">
+    <h3>PORTFOLIO</h3>
+    <div class="container">
+        <div id="port1" class="row">
+            <div class="col-md-3"><div class="img1"><p class="word1"><strong>Stats Notifications</strong></p></div></div>
+            <div class="col-md-3"><div class="img2"><p class="word2"><strong>Abstract</strong></p></div></div>
+            <div class="col-md-3"><div class="img3"><P class="word3"><strong>Mighty Ontario Security</strong></P></div></div>
+            <div class="col-md-3"><div class="img4"><P class="word4"><strong>Abstract</strong></P></div></div>
+        </div>
+        <div id="port2" class="row">
+            <div class="col-md-3"><div class="img5"><p class="word5"><strong>Emma themes</strong></p></div></div>
+            <div class="col-md-3"><div class="img6"><p class="word6"><strong>Age Calculator</strong></p></div></div>
+            <div class="col-md-3"><div class="img7"><p class="word7"><strong>logos</strong></p></div></div>
+            <div class="col-md-3"><div class="img8"><p class="word8"><strong>Girrafe Restaurant</strong></p></div></div>
+        </div>
+    </div>
+</div>
+<div id="contact">
+    <h3>CONTACT US</h3>
+    <form id="form" class="form-inline">
+        <div class="form-group">
+            <input type="text" class="form-control" id="Name" placeholder="Name..." size="35" style="background:transparent">
+        </div>
+        <div class="form-group">
+            <input type="email" class="form-control" id="Email" placeholder="Email..." size="35" style="background:transparent">
+        </div>
+    </form>
+    <form id="form">
+        <div class="form-group"> 
+            <div class="row">
+                <div class="col-md-12">
+                    <textarea style="background:transparent" class="form-control inputstl" id="message" rows="10" placeholder="Your message here..."></textarea>
+                </div>
+            </div>
+        </div>
+        <div class="form-group">
+            <button type="submit" class="btn-secondary">SUBMIT</button>
+        </div>
+    </form>
+</div>
+<div class="row">
+    <div id="icons" class="col-md-12">
+        <img src="images/social icons/twitter.png">
+        <img src="images/social icons/dribble.png">
+        <img src="images/social icons/facebook.png">
+        <img src="images/social icons/g_plus.png">
+        <img src="images/social icons/skype.png">
+        <img src="images/social icons/stumble_upon.png">
+        <img src="images/social icons/behance.png">
+        <img src="images/social icons/pinterest.png">
+        <img src="images/social icons/flickr.png">
+    </div>
+</div>
+<div class="del">
+<p>Delani studios<br> 2021</p>
+</div>
+<footer>
      
 </body>
+<script src="js/jquery-3.6.0.js"></script>
+<script src="js/proj.js"></script>
 </html>
